[metadata]
name = confluent_xcat
summary = xCAT integration with confluent systems management server
description-file =
    README.txt
author = Victor Hu
author-email = vhu@us.ibm.com
home-page = http://xcat.sf.net/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
